--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
-<HTML>
-  <h1>hi</h1>
-</HTML>
+<!DOCTYPE html>
+<html>
+  <body>
+    <h1 class = "MainTitle">A New Age for Music: Jazz</h1>
+  </body>
+  <style>
+    .MainTitle{
+      color:blue;
+    }
+  </style>
+</html>
