--- a/index.html
+++ b/index.html
@@ -1,12 +1,38 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <style>
+      #main_title{
+        border-radius: 10px;
+        padding: 2px;
+        font-size: 30px;
+        font-family: Arial, Helvetica, sans-serif;
+        text-align: center;
+        }
+      #text_box{
+        background: #AAA;
+        border-radius: 10px;
+        padding: 10px;
+        font-size: 30px;
+        font-family: Arial, Helvetica, sans-serif;
+        text-align: left;
+        }
+    </style>
+  </head>
   <body>
-    <h1 class = "MainTitle">A New Age for Music: Jazz</h1>
-    <p>hello</p>
+    <div id = "main_title">
+      <h1>
+        Jazz: A New Horizon of Music
+      </h1>
+     </div>
+     <div id="text_box">
+       <h2>
+        Thesis
+       </h2>
+       <p>
+       The creation of Jazz music in the early 20th centruy was a new and innovative step in American culture. Jazz was a turning point in the sense that it strayed from the straight-timed music at the time in favor for swing and syncopated rythms, and shifted popular music towards the formation of Blues, Rock, and other forms of popular music.
+       </p>
+       <img src = "CharlieParker.jpg">
+     </div>
   </body>
-  <style>
-    .MainTitle{
-      color:blue;
-    }
-  </style>
 </html>
