--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         font-family: Arial, Helvetica, sans-serif;
         text-align: center;
         }
-      #text_box{
+      .text_box{
         background: #AAA;
         border-radius: 10px;
         padding: 10px;
@@ -25,14 +25,24 @@
         Jazz: A New Horizon of Music
       </h1>
      </div>
-     <div id="text_box">
+     <div class="text_box">
        <h2>
         Thesis
        </h2>
        <p>
        The creation of Jazz music in the early 20th centruy was a new and innovative step in American culture. Jazz was a turning point in the sense that it strayed from the straight-timed music at the time in favor for swing and syncopated rythms, and shifted popular music towards the formation of Blues, Rock, and other forms of popular music.
        </p>
-       <img src = "CharlieParker.jpg">
+       <img src = "https://africanamerican-abc--clio-com.eu1.proxy.openathens.net/assets/mediaserver/AfricanAmerican/1647/1647236w.jpg" >
+         
+      
+     </div>
+     <div class="text_box">
+       <h2>
+         The Harlem Rennaissance
+       </h2>
+       <p>
+         The Harlem Renaissance contributed greatly to the rise of Jazz. During this time black cultural expression increased, leading to increased exposure of Jazz music. The Harlem Renaissance allowed black musicians to thrive in small jazz clubs, and led to the inspiration of styles of jazz.ex: Afro-Cuban, Latin, Bebop
+       </p>
      </div>
   </body>
 </html>
