--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
        <p>
        The creation of Jazz music in the early 20th centruy was a new and innovative step in American culture. Jazz was a turning point in the sense that it strayed from the straight-timed music at the time in favor for swing and syncopated rythms, and shifted popular music towards the formation of Blues, Rock, and other forms of popular music.
        </p>
-       <img src = "https://africanamerican-abc--clio-com.eu1.proxy.openathens.net/assets/mediaserver/AfricanAmerican/1647/1647236w.jpg" >
+       <img src = "CharlieParker.jpg" >
          
       
      </div>
