--- a/index.html
+++ b/index.html
@@ -2,20 +2,23 @@
 <html>
   <head>
     <style>
-      #main_title{
-        border-radius: 10px;
-        padding: 2px;
-        font-size: 30px;
-        font-family: Arial, Helvetica, sans-serif;
-        text-align: center;
+    
+       #main_title{
+          border-radius: 10px;
+          padding: 2px;
+          font-size: 30px;
+          font-family: Arial, Helvetica, sans-serif;
+          text-align: center;
         }
-      .text_box{
-        background: #AAA;
-        border-radius: 10px;
-        padding: 10px;
-        font-size: 30px;
-        font-family: Arial, Helvetica, sans-serif;
-        text-align: left;
+
+        .text_box{
+          background: #AAA;
+          border-radius: 10px;
+          padding: 10px;
+          font-size: 25px;
+          font-family: Arial, Helvetica, sans-serif;
+          text-align: left;
+          margin-top: 10px;
         }
     </style>
   </head>
