--- a/index.html
+++ b/index.html
@@ -44,8 +44,22 @@
          The Harlem Rennaissance
        </h2>
        <p>
-         The Harlem Renaissance contributed greatly to the rise of Jazz. During this time black cultural expression increased, leading to increased exposure of Jazz music. The Harlem Renaissance allowed black musicians to thrive in small jazz clubs, and led to the inspiration of styles of jazz.ex: Afro-Cuban, Latin, Bebop
+         The Harlem Renaissance contributed greatly to the rise of Jazz. 
+         During this time black cultural expression increased, leading to increased exposure of Jazz music. 
+         The Harlem Renaissance allowed black musicians to thrive in small jazz clubs, 
+         and led to the inspiration of styles of jazz.ex: Afro-Cuban, Latin, Bebop.
        </p>
      </div>
+
+    <div class = "text_box">
+      <h2>
+        The Rise of Jazz
+      </h2>
+      <p>
+        Jazz captivated audiences with the use of syncopated rythms over straight-timed notes.
+        Jazz was a turning point a sense that it strayed away from musical norms at the time,
+        but nevertheless gained popularity along with the culture of the roaring 20s.
+      </p>
+    </div>
   </body>
 </html>
