--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
         Thesis
        </h2>
        <p>
-       The creation of Jazz music in the early 20th centruy was a new and innovative step in American culture. Jazz was a turning point in the sense that it strayed from the straight-timed music at the time in favor for swing and syncopated rythms, and shifted popular music towards the formation of Blues, Rock, and other forms of popular music.
+       The creation of Jazz music in the early 20th centruy was a new and innovative step in American culture. 
+       Jazz was a turning point in the sense that it strayed from the straight-timed music at the time in favor for swing 
+       and syncopated rythms, and shifted popular music towards the formation of Blues, Rock, 
+       and other forms of popular music.
        </p>
        <img src = "CharlieParker.jpg" >
          
@@ -47,7 +50,11 @@
          The Harlem Renaissance contributed greatly to the rise of Jazz. 
          During this time black cultural expression increased, leading to increased exposure of Jazz music. 
          The Harlem Renaissance allowed black musicians to thrive in small jazz clubs, 
-         and led to the inspiration of styles of jazz.ex: Afro-Cuban, Latin, Bebop.
+         and led to the inspiration of styles of jazz.ex: Afro-Cuban, Latin, Bebop. Prominent Jazz artists like Duke Ellington, 
+         Charles Mingus, Thad Jones, Count Basie, Louis Armstrong, and many more
+         formed jazz combos and ensembles and performed at venues which often times denied access to African American customers.
+         In this way, Jazz allowed African American music and culture to be more expressed than ever before, especially with the
+         rise of black artists during the Harlem Renaissance.
        </p>
      </div>
 
