--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
           text-align: center;
         }
 
+        #Charlie_Parker_Image{
+          float: right;
+        }
         .text_box{
           background: #AAA;
           border-radius: 10px;
@@ -38,7 +41,7 @@
        and syncopated rythms, and shifted popular music towards the formation of Blues, Rock, 
        and other forms of popular music.
        </p>
-       <img src = "CharlieParker.jpg" >
+       <img src = "CharlieParker.jpg" id = "Charlie_Parker_image">
          
       
      </div>
