--- a/index.html
+++ b/index.html
@@ -94,6 +94,9 @@
           is played, and I can hardly keep my feet still. Anyone who can really dance will respond the same way."
         </p>
       </div>
+      <p>
+        -"'Jazz? It Tickles This Bird's Feet So They Just Won't Behave' (The Washington Times, September 12, 1920)
+      </p>
     </div>
   </body>
 </html>
