--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           float: right;
         }
         .text_box{
-          background: #AAA;
+          background: #FFD700;
           border-radius: 10px;
           padding: 10px;
           font-size: 25px;
@@ -24,7 +24,7 @@
           margin-top: 10px;
         }
         .quote_box{
-          background: #000000;
+          background: #FFD700;
           font-family: Arial, Helvetica, sans-serif;
           color: #FFFFFF;
            text-align: left;
