--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           float: right;
         }
         .text_box{
-          background: #FFD700;
+          background: #F4BA00;
           border-radius: 10px;
           padding: 10px;
           font-size: 25px;
@@ -24,9 +24,9 @@
           margin-top: 10px;
         }
         .quote_box{
-          background: #FFD700;
+          background: #d3d3d3;
           font-family: Arial, Helvetica, sans-serif;
-          color: #FFFFFF;
+          color: #CA2B1E;
            text-align: left;
           margin-top: 10px;
           border-radius: 10px;
