--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           float: right;
         }
         .text_box{
-          background: #F4BA00;
+          background: #DDD;
           border-radius: 10px;
           padding: 10px;
           font-size: 25px;
@@ -24,7 +24,7 @@
           margin-top: 10px;
         }
         .quote_box{
-          background: #d3d3d3;
+          background: #DDD;
           font-family: Arial, Helvetica, sans-serif;
           color: #CA2B1E;
            text-align: left;
