--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         #Charlie_Parker_Image{
           float: right;
         }
+        .body{
+          background: #F4BA00;
+        }
         .text_box{
           background: #DDD;
           border-radius: 10px;
@@ -35,7 +38,7 @@
         }
     </style>
   </head>
-  <body>
+  <body id ="body">
     <div id = "main_title">
       <h1>
         Jazz: A New Horizon of Music
