--- a/index.html
+++ b/index.html
@@ -14,11 +14,8 @@
         #Charlie_Parker_Image{
           float: right;
         }
-        .body{
-          background: #F4BA00;
-        }
         .text_box{
-          background: #DDD;
+          background: #CA2B1E
           border-radius: 10px;
           padding: 10px;
           font-size: 25px;
@@ -27,9 +24,9 @@
           margin-top: 10px;
         }
         .quote_box{
-          background: #DDD;
+          background: #000000;
           font-family: Arial, Helvetica, sans-serif;
-          color: #CA2B1E;
+          color: #ffffff;
            text-align: left;
           margin-top: 10px;
           border-radius: 10px;
