--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           float: right;
         }
         .text_box{
-          background: #CA2B1E
+          background: #CA2B1E;
           border-radius: 10px;
           padding: 10px;
           font-size: 25px;
