--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         but nevertheless gained popularity along with the culture of the roaring 20s. The new, exciting music was
         popular in clubs and among the common people, quickly became infused in popular music.
       </p>
-      <img src = "Duke_Ellington.jpg">
+      <img src = "Duke_Ellington.jpg" style = "width: 100px">
       <h2>
         What critics say:
       </h2>
