--- a/index.html
+++ b/index.html
@@ -33,6 +33,15 @@
           padding: 10px;
           font-size: 25px;
         }
+        .image_caption{
+          font-family: Arial, Helvetica, sans-serif;
+          color: #F4BA00;
+           text-align: left;
+          margin-top: 10px;
+          border-radius: 10px;
+          padding: 10px;
+          font-size: 25px;
+        }
     </style>
   </head>
   <body id ="body">
@@ -46,6 +55,9 @@
         Thesis
        </h2>
        <img src = "CharlieParker.jpg" id = "Charlie_Parker_image">
+       <p class = "image_caption">
+         Charlie Parker playing the alto saxophone backstage at Carnegie Hall
+       </p>
        <p>
        The creation of Jazz music in the early 20th centruy was a new and innovative step in American culture. 
        Jazz was a turning point in the sense that it strayed from the straight-timed music at the time in favor for swing 
@@ -84,6 +96,9 @@
         popular in clubs and among the common people, quickly became infused in popular music.
       </p>
       <img src = "Duke_Ellington.jpg" style = "width: 300px; text-align: center;">
+      <p class = "image_caption">
+        Duke Ellington performin at the Aquarium club in New York
+      </p>
       <h2>
         What critics say:
       </h2>
