--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
         #Charlie_Parker_Image{
           float: right;
         }
+        #WCS{
+          border-radius: 10px;
+          padding: 2px;
+          background: #F4BA00;
+        }
         .text_box{
           background: #CA2B1E;
           border-radius: 10px;
@@ -99,17 +104,19 @@
       <p class = "image_caption">
         Duke Ellington performin at the Aquarium club in New York
       </p>
-      <h2>
-        What critics say:
-      </h2>
-      <div class = "quote_box">
-        <p>
-          "Straight musicians and their friends can say what they wish about jazz, can say that it is not music, 
-          and that there is no harmony in it and so on, but just the same, there is something in it, rhythm, or 
-          whatever you choose to call it, that gets into the blood. I have been in theaters when a good jazz number 
-          is played, and I can hardly keep my feet still. Anyone who can really dance will respond the same way."
-        </p>
-      </div>
+      <div id = "WCS">
+        <h2>
+          What critics say:
+        </h2>
+        <div class = "quote_box">
+          <p>
+            "Straight musicians and their friends can say what they wish about jazz, can say that it is not music, 
+            and that there is no harmony in it and so on, but just the same, there is something in it, rhythm, or 
+            whatever you choose to call it, that gets into the blood. I have been in theaters when a good jazz number 
+            is played, and I can hardly keep my feet still. Anyone who can really dance will respond the same way."
+          </p>
+        </div>
+    </div>
       <p>
         -"'Jazz? It Tickles This Bird's Feet So They Just Won't Behave' (The Washington Times, September 12, 1920)
       </p>
