--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         #Charlie_Parker_Image{
           float: right;
         }
-        #WCS{
+        .media_box{
           border-radius: 10px;
           padding: 2px;
           background: #F4BA00;
@@ -40,7 +40,7 @@
         }
         .image_caption{
           font-family: Arial, Helvetica, sans-serif;
-          color: #F4BA00;
+         
            text-align: left;
           margin-top: 10px;
           border-radius: 10px;
@@ -59,10 +59,12 @@
        <h2>
         Thesis
        </h2>
-       <img src = "CharlieParker.jpg" id = "Charlie_Parker_image">
-       <p class = "image_caption">
+       <div class = "media_box">
+         <img src = "CharlieParker.jpg" id = "Charlie_Parker_image">
+         <p class = "image_caption">
          Charlie Parker playing the alto saxophone backstage at Carnegie Hall
-       </p>
+         </p>
+       </div>
        <p>
        The creation of Jazz music in the early 20th centruy was a new and innovative step in American culture. 
        Jazz was a turning point in the sense that it strayed from the straight-timed music at the time in favor for swing 
@@ -100,11 +102,14 @@
         but nevertheless gained popularity along with the culture of the roaring 20s. The new, exciting music was
         popular in clubs and among the common people, quickly became infused in popular music.
       </p>
-      <img src = "Duke_Ellington.jpg" style = "width: 300px; text-align: center;">
-      <p class = "image_caption">
+      <div class = "media_box">
+        <img src = "Duke_Ellington.jpg" style = "width: 300px; text-align: center;">
+        <p class = "image_caption">
+        </p>
+      </div>
         Duke Ellington performin at the Aquarium club in New York
       </p>
-      <div id = "WCS">
+      <div class = "media_box">
         <h2>
           What critics say:
         </h2>
