--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@
           padding: 10px;
           font-size: 15px;
         }
+        .image{
+            margin-top: 10px;
+          border-radius: 10px;
+          padding: 10px;
+          font-size: 15px;
+        }
     </style>
   </head>
   <body id ="body">
@@ -60,7 +66,7 @@
         Thesis
        </h2>
        <div class = "media_box">
-         <img src = "CharlieParker.jpg" id = "Charlie_Parker_image">
+         <img src = "CharlieParker.jpg" id = "Charlie_Parker_image" class = "image">
          <p class = "image_caption">
          Charlie Parker playing the alto saxophone backstage at Carnegie Hall
          </p>
@@ -103,12 +109,12 @@
         popular in clubs and among the common people, quickly became infused in popular music.
       </p>
       <div class = "media_box">
-        <img src = "Duke_Ellington.jpg" style = "width: 300px; text-align: center;">
+        <img src = "Duke_Ellington.jpg" style = "width: 300px; text-align: center;" class = "image">
         <p class = "image_caption">
+          Duke Ellington performin at the Aquarium club in New York
         </p>
       </div>
-        Duke Ellington performin at the Aquarium club in New York
-      </p>
+        
       <div class = "media_box">
         <h2>
           What critics say:
