--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
           border-radius: 10px;
           padding: 2px;
           background: #F4BA00;
+          margin-top: 10px;
         }
         .text_box{
           background: #CA2B1E;
