--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
           padding: 2px;
           background: #F4BA00;
           margin-top: 10px;
+          width: 50px;
         }
         .text_box{
           background: #CA2B1E;
