--- a/index.html
+++ b/index.html
@@ -134,5 +134,13 @@
         -"'Jazz? It Tickles This Bird's Feet So They Just Won't Behave' (The Washington Times, September 12, 1920)
       </p>
     </div>
+    <div class = "text_box">
+      <h2>
+        Inspiration for popular music
+      </h2>
+      <p>
+        Jazz was a key factor in shaping popular music as we know it today
+      </p>
+    </div>
   </body>
 </html>
