--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           width: 500px;
         }
         .text_box{
-          background: #CA2B1E;
+          background: #DDD;
           border-radius: 10px;
           padding: 10px;
           font-size: 25px;
