--- a/index.html
+++ b/index.html
@@ -139,8 +139,40 @@
         Inspiration for popular music
       </h2>
       <p>
-        Jazz was a key factor in shaping popular music as we know it today
+        Jazz was a key factor in shaping popular music as we know it today.
+        Jazz branched put into many styles like
+        New Orleans jazz, ragtime, Dixieland jazz, swing,
+        free jazz, jazz rock fusion, along with a myriad
+        of other styles and subgenres. From the articulate
+        and catchy rythms of jazz cam about blues and rock
+        styles, which heaviy carry into the popular music
+        of today. Jazz forever altered the course of 
+        music history and shaped popular music as we know it today.
       </p>
     </div>
   </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
