--- a/index.html
+++ b/index.html
@@ -55,6 +55,14 @@
           padding: 10px;
           font-size: 15px;
         }
+        .audio_player{
+          position: fixed;
+          background:#CA2B1E;
+          width: 2000px;
+          height:100px;
+          bottom: 0;
+          left: 0;
+        }
     </style>
   </head>
   <body id ="body">
