--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           width: 2000px;
           height:100px;
           bottom: 0;
-          left: 0;
+          right: 0;
         }
     </style>
   </head>
