--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
     </style>
   </head>
   <body id ="body">
+    <div class = "audio_player">
+      
+    </div>
     <div id = "main_title">
       <h1>
         Jazz: A New Horizon of Music
