--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
   </head>
   <body id ="body">
     <div class = "audio_player">
-      <audio control>
+      <audio controls>
+        <source src = "take_five.mp3" type = "audio/mpeg">
       </audio>
     </div>
     <div id = "main_title">
