--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
           font-size: 15px;
         }
         .audio_player{
+          margin: auto;
           position: fixed;
           background:#CA2B1E;
           width: 2000px;
