--- a/index.html
+++ b/index.html
@@ -64,13 +64,18 @@
           bottom: 0;
           right: 0;
         }
+        .audio{
+          margin: auto;
+        }
     </style>
   </head>
   <body id ="body">
     <div class = "audio_player">
-      <audio controls>
-        <source src = "take_five.mp3" type = "audio/mpeg">
-      </audio>
+      <div class = "audio">
+        <audio controls>
+          <source src = "take_five.mp3" type = "audio/mpeg">
+        </audio>
+      </div>
     </div>
     <div id = "main_title">
       <h1>
