--- a/index.html
+++ b/index.html
@@ -65,16 +65,18 @@
           right: 0;
         }
         .audio{
-          margin: auto;
+          display: flex;
+          justify-content: center;
+          align-items: center;
         }
     </style>
   </head>
   <body id ="body">
     <div class = "audio_player">
-      <div class = "audio">
+     
         <audio controls>
           <source src = "take_five.mp3" type = "audio/mpeg">
-        </audio>
+      
       </div>
     </div>
     <div id = "main_title">
