--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
           right: 0;
         }
         .audio{
-          display: flex;
-          justify-content: center;
-          align-items: center;
+          margin: auto;
+          bottom: 0;
+          right: 0;
         }
     </style>
   </head>
