--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
     </style>
   </head>
   <body id ="body">
-    <div class = "audio_player">
+      <div class = "audio_player">
      
         <audio controls>
           <source src = "take_five.mp3" type = "audio/mpeg">
-      
+        </audio>
       </div>
     </div>
     <div id = "main_title">
