--- a/index.html
+++ b/index.html
@@ -69,11 +69,17 @@
           right: 0;
         }
     </style>
+    <script>
+      
+    </script>
   </head>
   <body id ="body">
       <div class = "audio_player">
-     
+        <button>
+          <img src = "next_song.png">
+        </button>
         <audio controls>
+          <source src = "take_five.mp3" type = "audio/mpeg">
           <source src = "take_five.mp3" type = "audio/mpeg">
         </audio>
       </div>
