--- a/index.html
+++ b/index.html
@@ -82,17 +82,16 @@
     </style>
     <script>
       
+      function play_jazz{
+        
+      }
     </script>
   </head>
   <body id ="body">
       <div class = "audio_player">
-        <button id = "jazz_button">
+        <button id = "jazz_button" onclick = "play_jazz">
           Listen to Jazz!
         </button>
-        <div id = "take_five">
-          <audio controls>
-            <source src = "take_five.mp3" type = "audio/mpeg">
-          </audio>
         </div>
       </div>
   
