--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       const blue_bossa = document.getElementById("blue_bossa");
       const nows_the_time = document.getElementById("nows_the_time");*/
 
-      const songs = [document.getElementById("footprints"), document.getElementById("song_for_my_father"), document.getElementById("st_thomas"),  document.getElementById("autumn_leaves"), document.getElementById("c-jam_blues"), document.getElementById("blue_bossa"), document.getElementById("nows_the_time")];
+      var songs = [document.getElementById("footprints"), document.getElementById("song_for_my_father"), document.getElementById("st_thomas"),  document.getElementById("autumn_leaves"), document.getElementById("c-jam_blues"), document.getElementById("blue_bossa"), document.getElementById("nows_the_time")];
       function play_jazz{
         var randint = Math.floor(Math.Random*8);
         for(i = 0; i < 8 ; i ++){
