--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           if(i == randint){
             songs[i].display.visibility("visible");
           }else if (i != randint){
-            songs[i].display.visiblity("block");
+            songs[i].display.visiblity("none");
           }
         }
       }
