--- a/index.html
+++ b/index.html
@@ -92,14 +92,14 @@
       var songs = [document.getElementById("footprints"), document.getElementById("song_for_my_father"), document.getElementById("st_thomas"),  document.getElementById("autumn_leaves"), document.getElementById("c-jam_blues"), document.getElementById("blue_bossa"), document.getElementById("nows_the_time")];
       function play_jazz{
         var randint = Math.floor(Math.Random*8);
-        for(i = 0; i < 8 ; i ++){
+        /*for(i = 0; i < 8 ; i ++){
           if(i == randint){
             songs[i].display.visibility("visible");
           }else if (i != randint){
             songs[i].display.visiblity("none");
           }
         }
-      }
+      }*/
     </script>
   </head>
   <body id ="body">
