--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
   </head>
   <body id ="body">
 
-
-        <div style = "positiion:absolute">
+      <div class = "audio_player">
+        <div style= "width = 300px">
           <audio controls>
             <source src = "footprints.mp3" type = "audio/mpeg">
           </audio>
@@ -126,6 +126,7 @@
           </audio>
         </div>
         </div>
+       
       
   
     <div id = "main_title">
