--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
           font-family: Arial, Helvetica, sans-serif;
           text-align: left;
           margin-top: 10px;
+          width:1000px;
         }
         .quote_box{
           background: #000000;
