--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           background:#CA2B1E;
           width: 300px;
           height: 500px;
-          bottom: 0;
+          top: 0;
           right: 0;
           font-family: Arial, Helvetica, sans-serif;
           font-size:25px;
