--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           padding: 10px;
           font-size: 25px;
           font-family: Arial, Helvetica, sans-serif;
-          text-align: left;
+          text-align: center;
           margin-top: 10px;
           width:1000px;
         }
@@ -46,7 +46,7 @@
           background: #000000;
           font-family: Arial, Helvetica, sans-serif;
           color: #ffffff;
-           text-align: left;
+           text-align: center;
           margin-top: 10px;
           border-radius: 10px;
           padding: 10px;
@@ -75,7 +75,7 @@
           top: 0;
           right: 0;
           font-family: Arial, Helvetica, sans-serif;
-          font-size:10px;
+          font-size:15px;
         }
         .audio{
           margin: auto;
