--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
           background: #F4BA00;
           margin-top: 10px;
           width: 500px;
+          align: center;
         }
         .text_box{
           background: #DDD;
@@ -41,6 +42,7 @@
           text-align: center;
           margin-top: 10px;
           width:1000px;
+          align: center;
         }
         .quote_box{
           background: #000000;
@@ -51,11 +53,12 @@
           border-radius: 10px;
           padding: 10px;
           font-size: 25px;
+          align:center;
         }
         .image_caption{
           font-family: Arial, Helvetica, sans-serif;
          
-           text-align: left;
+           text-align: center;
           margin-top: 10px;
           border-radius: 10px;
           padding: 10px;
