--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
         music history and shaped popular music as we know it today.
       </p>
     </div>
-  <button href = "https://docs.google.com/document/d/13DJEKfQljTtb-xDXY_GkY6oMFDENpg4yZIAZQNisGKc/edit?usp=sharing">Annotated Bibliography</button>
+  <a href = "https://docs.google.com/document/d/13DJEKfQljTtb-xDXY_GkY6oMFDENpg4yZIAZQNisGKc/edit?usp=sharing">Annotated Bibliography</a>
   </body>
 </html>
 
