--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
           padding: 2px;
           font-size: 30px;
           font-family: Arial, Helvetica, sans-serif;
-          text-align: center;
+          text-align: left;
         }
 
         #Charlie_Parker_Image{
