--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
           font-size: 30px;
           font-family: Arial, Helvetica, sans-serif;
           text-align: left;
+          width: 700px;
         }
 
         #Charlie_Parker_Image{
